--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-title: Tusuke Takahashi - Web/Software Developer
+title: Tusuke Takahashi
+description: Web/Software Developer
